WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275740
[GStreamer][WebRTC] Caps from SDP and RealtimeOutgoingAudioSourceGStreamer aren't aligned
https://bugs.webkit.org/show_bug.cgi?id=275740
Summary
[GStreamer][WebRTC] Caps from SDP and RealtimeOutgoingAudioSourceGStreamer ar...
Carlos Bentzen
Reported
2024-06-21 10:04:39 PDT
During negotiation, it may happen sometimes that a transceiver in webrtcbin ends up with codec preferences containing extmap-5=(string)urn:ietf:params:rtp-hdrext:ssrc-audio-level while the pad has in the caps extmap-5=(string)< "", urn:ietf:params:rtp-hdrext:ssrc-audio-level, "vad\=on" > so internally in webrtcbin the media gets rejected during negotiation because the caps don't intersect. Patch incoming..
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Bentzen
Comment 1
2024-06-21 10:09:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30050
EWS
Comment 2
2024-06-22 02:17:07 PDT
Committed
280273@main
(3f3c280f8192): <
https://commits.webkit.org/280273@main
> Reviewed commits have been landed. Closing PR #30050 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-06-22 02:18:15 PDT
<
rdar://problem/130325296
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug