[GStreamer][WebRTC] Caps from SDP and RealtimeOutgoingAudioSourceGStreamer aren't aligned https://bugs.webkit.org/show_bug.cgi?id=275740

Reviewed by Philippe Normand.

Align codec-preferences of webrtcbin's transceivers with caps from
RealtimeOutgoingAudioSourceGStreamer by setting vad=on in the
ssrc-audio-level extension.

* LayoutTests/platform/glib/fast/mediastream/RTCPeerConnection-inspect-answer-expected.txt:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::capsFromSDPMedia):
(WebCore::setSsrcAudioLevelVadOn):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.h:
* Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.cpp:
(WebCore::RealtimeOutgoingAudioSourceGStreamer::setPayloadType):

Canonical link: https://commits.webkit.org/280273@main